# curry

./: .gitignore  .gitmessage  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  SPEC.md  b
.github/workflows/: codeql.yml
Formula/: curry-full.rb  curry.rb
build_hb/: CPackConfig.cmake  CPackSourceConfig.cmake  curry
build_hb/tests/: curry_test
docs/: INSTALL.md  README.md  RPI.md  akkadian-reference.md  ampere-explorer.md  faraday-explorer.md  gauss-b-explorer.md  gauss-e-explorer.md  language.md  matrix-tensor.md  mcp-clients.md  module-crypto.md  module-git.md  module-graphql.md  module-image.md  module-json.md  module-ldap.md  module-mqtt.md  module-neo4j.md  module-network.md  module-ode.md  module-plplot.md  module-profiling.md  module-qt6.md  module-redis.md  module-regex.md  module-rpi.md  module-sqlite.md  module-storage.md  module-sync.md  module-ui.md  module-vecdb.md  multivec.md  notes_for_the_cookbook.md  quantum.md  security-advisory-0.7.6.1.md  surreal.md  symbolic.md
examples/: ampere-explorer.scm  faraday-explorer.scm  fibonacci-akkadian.scm  frac-calc-demo.scm  gauss-b-explorer.scm  gauss-e-explorer.scm  mandelbrot.scm  matrix-tensor-demo.scm  maxwell-wave.scm  mcp_math.scm  mcp_nbody.scm  mcp_server.scm  plplot-demo.scm  prime-lattice-3d.scm  profiling_mcp.scm  quantum_scenarios.scm  solar-system-qt6.scm  symbolic-grapher.scm  tesseract.scm  tesseract_anaglyph.scm
include/: curry.h
lib/curry/modules/curry/: gravity.scm  ode.scm  pde.scm  sicm.scm
lib/curry/modules/curry/gravity/: scenarios.scm
lib/curry/modules/curry/qt6/: stereo.scm
modules/crypto/: crypto.c
modules/f64vector/: f64vector.c
modules/git/: git.c
modules/graphql/: graphql.c
modules/image/: image.c
modules/json/: json.c
modules/ldap/: ldap.c
modules/math/: matrix.c  tensor.c
modules/mcp/: mcp.c
modules/mqtt/: mqtt.c
modules/neo4j/: neo4j.c
modules/network/: network.c
modules/plplot/: plplot.c
modules/profiling/: profiling.c
modules/qt6/: qt6.cpp
modules/redis/: redis.c
modules/regex/: regex.c
modules/rpi/: rpi.c
modules/sqlite/: sqlite.c
modules/storage/: storage.c
modules/symengine/: symengine.cpp
modules/sync/: sync.c
modules/vecdb/: vecdb.cpp
scripts/: bump-release.sh
src/: actors.c  actors.h  akkadian.h  akkadian_eval.h  akkadian_names.h  api.c  builtins.c  builtins.h  builtins_curry.c  env.c  env.h  eval.c  eval.h  gc.c  gc.h  main.c  matrix.c  matrix.h  modules.c  modules.h  multivec.c  multivec.h  numeric.c  numeric.h  object.h  port.c  port.h  profiling.c  profiling.h  quantum.c  quantum.h  reader.c  reader.h  set.c  set.h  surreal.c  surreal.h  symbol.c  symbol.h  symbol_list.h  (+6 more)
tests/: CMakeLists.txt  actors_tests.scm  d_operator_tests.scm  dynamic_wind_tests.scm  mqtt_tests.scm  numeric_ext_tests.scm  ode_tests.scm  partial_tests.scm  pde_numerical_tests.scm  pde_tests.scm  profiling_tests.scm  r7rs_tests.scm  redis_tests.scm  sicm_tests.scm  symbolic_tests.scm  syntax_rules_tests.scm  test_core.c  test_git.scm  test_mcp.sh  test_mqtt.sh  test_numeric.scm  test_plplot.scm  test_qt6.scm  test_redis.sh  test_rpi.scm  test_ui.scm  trig_tests.scm  tuple_tests.scm
